# gen/http/openapi3.yaml
@@ -560,7 +560,7 @@ paths:
                                 pseudo_anonymity: true
                                 status: disabled
                                 total_voting_request_invitations: 3640604573078540663
-                                vote_uid: a02bdbaf-53b1-4d47-bc04-dd7e459dd308
+                                uid: a02bdbaf-53b1-4d47-bc04-dd7e459dd308
                 "400":
                     description: 'BadRequest: Bad request'
                     content:
@@ -628,7 +628,7 @@ paths:
                 - jwt_header_Authorization:
                     - manage:projects
                     - manage:voting
-    /votes/{vote_uid}:
+    /votes/{uid}:
         delete:
             tags:
                 - vote
@@ -636,7 +636,7 @@ paths:
             description: Delete vote (proxies to ITX DELETE /voting/poll/{poll_id}). Only allowed when status is 'disabled'
             operationId: vote#delete_vote
             parameters:
-                - name: vote_uid
+                - name: uid
                   in: path
                   description: Vote UID
                   required: true
@@ -714,7 +714,7 @@ paths:
             description: Get vote details (proxies to ITX GET /voting/poll/{poll_id})
             operationId: vote#get_vote
             parameters:
-                - name: vote_uid
+                - name: uid
                   in: path
                   description: Vote UID
                   required: true
@@ -784,7 +784,7 @@ paths:
                                 pseudo_anonymity: true
                                 status: disabled
                                 total_voting_request_invitations: 1118621952348161304
-                                vote_uid: a02bdbaf-53b1-4d47-bc04-dd7e459dd308
+                                uid: a02bdbaf-53b1-4d47-bc04-dd7e459dd308
                 "400":
                     description: 'BadRequest: Bad request'
                     content:
@@ -850,7 +850,7 @@ paths:
             description: Update vote (proxies to ITX PUT /voting/poll/{poll_id}). Only allowed when status is 'disabled'
             operationId: vote#update_vote
             parameters:
-                - name: vote_uid
+                - name: uid
                   in: path
                   description: Vote UID
                   required: true
@@ -962,7 +962,7 @@ paths:
                                 pseudo_anonymity: true
                                 status: disabled
                                 total_voting_request_invitations: 6265537937623771667
-                                vote_uid: a02bdbaf-53b1-4d47-bc04-dd7e459dd308
+                                uid: a02bdbaf-53b1-4d47-bc04-dd7e459dd308
                 "400":
                     description: 'BadRequest: Bad request'
                     content:
@@ -1021,7 +1021,7 @@ paths:
                 - jwt_header_Authorization:
                     - manage:projects
                     - manage:voting
-    /votes/{vote_uid}/bulk_resend:
+    /votes/{uid}/bulk_resend:
         post:
             tags:
                 - vote
@@ -1029,7 +1029,7 @@ paths:
             description: Bulk resend vote email to select recipients (proxies to ITX POST /voting/poll/{poll_id}/bulk_resend)
             operationId: vote#bulk_resend_vote
             parameters:
-                - name: vote_uid
+                - name: uid
                   in: path
                   description: Vote UID
                   required: true
@@ -1110,7 +1110,7 @@ paths:
                 - jwt_header_Authorization:
                     - manage:projects
                     - manage:voting
-    /votes/{vote_uid}/enable:
+    /votes/{uid}/enable:
         put:
             tags:
                 - vote
@@ -1118,7 +1118,7 @@ paths:
             description: Enable a vote for voting (proxies to ITX PUT /voting/poll/{poll_id}/enable)
             operationId: vote#enable_vote
             parameters:
-                - name: vote_uid
+                - name: uid
                   in: path
                   description: Vote UID
                   required: true
@@ -1189,7 +1189,7 @@ paths:
                 - jwt_header_Authorization:
                     - manage:projects
                     - manage:voting
-    /votes/{vote_uid}/extend:
+    /votes/{uid}/extend:
         post:
             tags:
                 - vote
@@ -1197,7 +1197,7 @@ paths:
             description: Extend a vote's end time (proxies to ITX POST /voting/poll/{poll_id}/extend)
             operationId: vote#extend_vote
             parameters:
-                - name: vote_uid
+                - name: uid
                   in: path
                   description: Vote UID
                   required: true
@@ -1263,7 +1263,7 @@ paths:
                                 pseudo_anonymity: true
                                 status: disabled
                                 total_voting_request_invitations: 3012793958848738629
-                                vote_uid: a02bdbaf-53b1-4d47-bc04-dd7e459dd308
+                                uid: a02bdbaf-53b1-4d47-bc04-dd7e459dd308
                 "400":
                     description: 'BadRequest: Bad request'
                     content:
@@ -1322,7 +1322,7 @@ paths:
                 - jwt_header_Authorization:
                     - manage:projects
                     - manage:voting
-    /votes/{vote_uid}/results:
+    /votes/{uid}/results:
         get:
             tags:
                 - vote
@@ -1330,7 +1330,7 @@ paths:
             description: Get vote results (proxies to ITX GET /voting/poll/{poll_id}/results)
             operationId: vote#get_vote_results
             parameters:
-                - name: vote_uid
+                - name: uid
                   in: path
                   description: Vote UID
                   required: true
@@ -3258,7 +3258,7 @@ components:
                     description: Total invitations sent
                     example: 5286924447393794571
                     format: int64
-                vote_uid:
+                uid:
                     type: string
                     description: Vote identifier
                     example: a02bdbaf-53b1-4d47-bc04-dd7e459dd308
@@ -3311,9 +3311,9 @@ components:
                 pseudo_anonymity: false
                 status: disabled
                 total_voting_request_invitations: 3584077878457580369
-                vote_uid: a02bdbaf-53b1-4d47-bc04-dd7e459dd308
+                uid: a02bdbaf-53b1-4d47-bc04-dd7e459dd308
             required:
-                - vote_uid
+                - uid
                 - name
                 - description
                 - status
